--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <canvas id="bg"></canvas>
     <main>
       <header>
-        <h1>Amumu</h1>
+        <h1>Amumucmh</h1>
         <p>🚀 Welcome to my website!</p>
       </header>
       <blockquote>
